fix dbmon example html

--- a/examples/dbmon/dbmon.html
+++ b/examples/dbmon/dbmon.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <div id="app"></div>
-    <link rel="stylesheet" href="dbmon/styles.css" />
-    <script src="dbmon/ENV.js"></script>
-    <script src="dbmon/memory-stats.js"></script>
-    <script src="dbmon/monitor.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="ENV.js"></script>
+    <script src="memory-stats.js"></script>
+    <script src="monitor.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
